[gd_scene load_steps=7 format=3 uid="uid://c6pdiakcixcgu"]

[ext_resource type="PackedScene" uid="uid://bc1obhce5w5rx" path="res://Scenes/Clock.tscn" id="1_id516"]
[ext_resource type="Script" path="res://Scenes/grandfather_clock.gd" id="2_2trsu"]
[ext_resource type="Texture2D" uid="uid://dhhqno1h0j1ir" path="res://Textures/GrandfatherClockTexture.png" id="2_bltyl"]
[ext_resource type="ArrayMesh" uid="uid://c2oyq3ums6ra0" path="res://3DModels/Grandfather_Clock_Model.obj" id="3_gj2ip"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fllvl"]
albedo_texture = ExtResource("2_bltyl")

[sub_resource type="BoxShape3D" id="BoxShape3D_fs0fd"]
size = Vector3(2.24292, 9.9917, 2.65308)

[node name="GrandfatherClock" instance=ExtResource("1_id516")]
script = ExtResource("2_2trsu")

[node name="ClockModel" parent="Moveables" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.869, 0)
material_override = SubResource("StandardMaterial3D_fllvl")
mesh = ExtResource("3_gj2ip")

[node name="ClockBack" parent="Moveables/ClockModel" index="0"]
visible = false

[node name="ClockBack2" parent="Moveables/ClockModel" index="1"]
visible = false

[node name="CollisionShape3D" parent="Moveables/ClockModel/Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.999997, 0, 0, 0, 1, -0.0173748, 5.23327, 0.0358582)
shape = SubResource("BoxShape3D_fs0fd")

[node name="HoursHand" parent="Moveables" index="2"]
transform = Transform3D(0.315857, 0, 0, 0, 0.315857, 0, 0, 0, 0.315857, 0.00510556, 10.2398, -0.193005)

[node name="MinutesHand" parent="Moveables" index="3"]
transform = Transform3D(0.315857, 0, 0, 0, 0.315857, 0, 0, 0, 0.315857, -0.027689, 10.2234, -0.199476)

[node name="SecondsHand" parent="Moveables" index="4"]
transform = Transform3D(0.286047, 0, 0, 0, 0.253799, 0, 0, 0, 0.0649437, -0.0185671, 10.2259, -0.200017)

[node name="GnomeModel" parent="." index="1"]
transform = Transform3D(-0.347851, 0, -0.0114179, 0, 0.348038, 0, 0.0114179, 0, -0.347851, -0.342116, 1.91566, 2.30362)
